[package]
name = "async-fuse"
version = "0.11.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "Helpers for fusing asynchronous computations."
documentation = "https://docs.rs/async-fuse"
readme = "README.md"
homepage = "https://github.com/udoprog/async-fuse"
repository = "https://github.com/udoprog/async-fuse"
license = "MIT/Apache-2.0"
keywords = ["futures", "async", "future"]
categories = ["asynchronous"]

[features]
stream = ["futures-core"]

[dependencies]
futures-core = { version = "0.3.8", optional = true }

[dev-dependencies]
async-stream = "0.3.0"
tokio = { version = "1.0.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
