[package]
name = "async-fuse"
version = "0.11.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "Helpers for fusing asynchronous computations."
documentation = "https://docs.rs/async-fuse"
readme = "README.md"
homepage = "https://github.com/udoprog/async-fuse"
repository = "https://github.com/udoprog/async-fuse"
license = "MIT/Apache-2.0"
keywords = ["async", "future", "futures"]
categories = ["asynchronous"]

[features]
stream = ["futures-core"]

[dependencies]
futures-core = { version = "0.3.27", optional = true }

[dev-dependencies]
async-stream = "0.3.4"
tokio = { version = "1.26.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
