[package]
name = "async-fuse"
version = "1.0.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.64"
description = "Helpers for fusing asynchronous computations."
documentation = "https://docs.rs/async-fuse"
readme = "README.md"
homepage = "https://github.com/udoprog/async-fuse"
repository = "https://github.com/udoprog/async-fuse"
license = "MIT OR Apache-2.0"
keywords = ["async", "future", "futures"]
categories = ["asynchronous"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
stream03 = ["dep:futures-core03"]

[dependencies]
futures-core03 = { package = "futures-core", version = "0.3.28", optional = true }

[dev-dependencies]
async-stream = "0.3.5"
tokio = { version = "1.27.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
